Modify the pipeline installation dependencies

--- a/.github/workflows/ut-e2e.yml
+++ b/.github/workflows/ut-e2e.yml
@@ -11,7 +11,7 @@ concurrency:
 
 jobs:
   lint:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, Linux, X64, nvidia-0, gpus-8]
     steps:
       - uses: actions/checkout@v4
 
@@ -20,12 +20,16 @@ jobs:
         with:
           python-version: "3.10"
 
+      - name: Install dev dependencies
+        run: |
+          pip install -r requirements-dev.txt
+
       - name: Run pre-commit
         run: |
           pre-commit run --all-files
 
   changes:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, Linux, X64, nvidia-0, gpus-8]
     outputs:
       ut_changed: ${{ steps.filter.outputs.ut }}
       e2e_changed: ${{ steps.filter.outputs.e2e }}
@@ -54,7 +58,7 @@ jobs:
       needs.lint.result == 'success' &&
       needs.changes.outputs.ut_changed == 'true' &&
       contains(github.event.pull_request.labels.*.name, 'ut')
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, Linux, X64, nvidia-0, gpus-8]
     steps:
       - uses: actions/checkout@v4
 
@@ -64,7 +68,12 @@ jobs:
             -v ${{ github.workspace }}:/workspace \
             -w /workspace \
             localhost:5000/vllm-plugin-fl:ci \
-            pytest tests/ut
+            bash -c "
+              set -e &&
+              pip install -r requirements.txt &&
+              pip install --no-build-isolation -e . &&
+              pytest tests/ut
+            "
 
   e2e:
     name: E2E Tests
@@ -73,7 +82,7 @@ jobs:
       needs.lint.result == 'success' &&
       needs.changes.outputs.e2e_changed == 'true' &&
       contains(github.event.pull_request.labels.*.name, 'e2e')
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, Linux, X64, nvidia-0, gpus-8]
     timeout-minutes: 90
     steps:
       - uses: actions/checkout@v4
@@ -85,5 +94,10 @@ jobs:
             -v /home/flagscale_cicd/docker/docker_build/docker_data:/home/gitlab-runner/data
             -w /workspace \
             localhost:5000/vllm-plugin-fl:ci \
-            pytest tests/e2e
+            bash -c "
+              set -e &&
+              pip install -r requirements.txt &&
+              pip install --no-build-isolation -e . &&
+              pytest tests/e2e
+            "
 
