Modify trigger branch

--- a/.github/workflows/ut-e2e.yml
+++ b/.github/workflows/ut-e2e.yml
@@ -2,7 +2,7 @@ name: UT & E2E (Label Driven)
 
 on:
   push:
-    branches: ["main"]
+    branches: ["test_ut"]
   pull_request:
     branches: ["main"]
     types: [opened, synchronize, labeled]
