--- a/.github/workflows/ut-e2e.yml
+++ b/.github/workflows/ut-e2e.yml
@@ -74,6 +74,7 @@ jobs:
       - name: Run UT (docker)
         run: |
           docker run --rm \
+            -u $(id -u):$(id -g) \
             -v ${{ github.workspace }}:/workspace \
             -w /workspace \
             localhost:5000/vllm-plugin-fl:ci \
@@ -89,12 +90,12 @@ jobs:
     needs: [lint, changes]
     if: |
       needs.lint.result == 'success' &&
-      needs.changes.outputs.ut_changed == 'true' &&
+      needs.changes.outputs.e2e_changed == 'true' &&
       (
         github.event_name == 'push' ||
         (
           github.event_name == 'pull_request' &&
-          contains(github.event.pull_request.labels.*.name, 'ut')
+          contains(github.event.pull_request.labels.*.name, 'e2e')
         )
       )
     runs-on: [self-hosted, Linux, X64, nvidia-0, gpus-8]
@@ -105,6 +106,7 @@ jobs:
       - name: Run E2E (docker)
         run: |
           docker run --rm \
+            -u $(id -u):$(id -g) \
             -v ${{ github.workspace }}:/workspace \
             -v /home/flagscale_cicd/docker/docker_build/docker_data:/home/gitlab-runner/data
             -w /workspace \
