--- a/.github/workflows/ut-e2e.yml
+++ b/.github/workflows/ut-e2e.yml
@@ -81,10 +81,9 @@ jobs:
             localhost:5000/vllm-plugin-fl:ci \
             bash -c "
               set -e &&
-              pip install pytest
               pip install -r requirements.txt &&
               pip install --no-build-isolation -e . &&
-              pytest tests/ut
+              python3 -m pytest tests/ut
             "
 
   e2e:
@@ -116,9 +115,8 @@ jobs:
             localhost:5000/vllm-plugin-fl:ci \
             bash -c "
               set -e &&
-              pip install pytest
               pip install -r requirements.txt &&
               pip install --no-build-isolation -e . &&
-              pytest tests/e2e
+              python3 -m pytest tests/e2e
             "
 
