--- a/.github/workflows/ut-e2e.yml
+++ b/.github/workflows/ut-e2e.yml
@@ -83,9 +83,9 @@ jobs:
               set -e &&
               pip install -r requirements.txt &&
               pip install --no-build-isolation -e . &&
-              python3 -m pytest tests/ut
+              python3 -m pytest -v tests/ut --ignore=tests/ut/work/
             "
-
+: <<'COMMENT'
   e2e:
     name: E2E Tests
     needs: [lint, changes]
@@ -119,4 +119,4 @@ jobs:
               pip install --no-build-isolation -e . &&
               python3 -m pytest tests/e2e
             "
-
+COMMENT
