--- a/.github/workflows/ut-e2e.yml
+++ b/.github/workflows/ut-e2e.yml
@@ -117,6 +117,6 @@ jobs:
               set -e &&
               pip install -r requirements.txt &&
               pip install --no-build-isolation -e . &&
-              python3 -m pytest tests/e2e
+              python3 -m pytest -v tests/e2e
             "
 COMMENT
